src/main.scss
@import "node_modules/bootstrap/scss/bootstrap";
@import "node_modules/bootstrap-vue/src/index.scss";

$grey: #c7c7c7;
.table {
  width: unset;
  tr,
  th,
  td {
    border: 1px solid $grey;
  }
}

.league-table {
  tr {
    cursor: pointer;
  }
}
.table th,
.table td {
  padding: 0.5rem;
}

.table thead th {
  border-bottom: unset;
}
.team-badge {
  height: 35px;
  display: block;
  margin-left: auto;
  margin-right: auto;
}

.team-badge-full {
  width: 300px;
  cursor: pointer;
  display: block;
  margin-left: auto;
  margin-right: auto;
}

.modal-title-league {
  margin-bottom: 0;
  line-height: 2;
  display: flex;
  cursor: pointer;
}

.adjust {
  tr:last-child,
  td:last-child {
    border-bottom: unset;
  }
  font-size: 80%;
  font-weight: 400;
  table-layout: fixed;
  width: 100%;
  margin-bottom: unset;
  .badge {
    margin: 0 10px;
    font-size: 100%;
    line-height: 1.2;
  }
  .leftx,
  .rightx {
    text-overflow: ellipsis;
    overflow: hidden;
    white-space: nowrap;
    display: inline-grid;
    width: 150px;
  }
}
@media only screen and (max-width: 450px) {
  .adjust {
    .leftx,
    .rightx {
      width: 100px;
    }
  }
}

.typeLegend {
  th {
    width: 80px;
    font-weight: normal;
  }
}

.light-grey {
  display: contents;
  color: #929292;
}

